--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -42,7 +42,11 @@
 }
 
 /* Apply these base styles to all icons */
-.i-ghost, .icon-feed, .icon-twitter, .icon-google-plus, .icon-facebook {
+.icon-ghost:before, 
+.icon-feed:before, 
+.icon-twitter:before, 
+.icon-google-plus:before, 
+.icon-facebook:before {
     font-family: 'icons';
     speak: none;
     font-style: normal;
@@ -56,7 +60,7 @@
 
 /* Each icon is created by inserting the corret character into the 
    content of the :before pseudo element. Like a boss. */
-.i-ghost:before {
+.icon-ghost:before {
     content: "\e000";
 }
 .icon-feed:before {
@@ -82,14 +86,12 @@ html {
     height: 100%;
     max-height: 100%;
     font-size: 62.5%;
-    overflow-x: hidden;
 }
 
 body {
     height: 100%;
     max-height: 100%;
-    /*font-family: 'Droid Serif', serif;*/
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Noto Serif', serif;
     font-size: 2.0rem;
     line-height: 1.6em;
     color: #3A4145;
@@ -106,29 +108,13 @@ body {
     background: #D6EDFF;
     text-shadow: none;
 }
-.left {
-    float: left;
-}
-.right {
-    float: right;
-}
-.clear {
-    clear: both;
-}
+
 h1, h2, h3,
 h4, h5, h6 {
     text-rendering: optimizeLegibility;
     line-height: 1;
     margin-top: 0;
-    margin-bottom: 10px;
     font-family: 'Open Sans', sans-serif;
-}
-h3, h4, h5, h6 {
-    text-rendering: optimizeLegibility;
-    line-height: 120%;
-    margin-top: 0;
-    font-family: 'Open Sans', sans-serif;
-    margin-bottom: 0%;
 }
 
 h1 {
@@ -162,121 +148,27 @@ h6 {
 }
 
 a {
-    color: inherit;
-    transition: all ease 0.3s;
-    -webkit-transition: all ease 0.3s;
-    -moz-transition: all ease 0.3s;
+    color: #4a4a4a;
+    transition: color ease 0.3s;
 }
 
 a:hover {
-    color: #86c440;
-}
-
-a.btn {
-    
-    text-decoration: none;
-    background-color: #9fd067;
-    border-radius: 6px;
-    -webkit-border-radius: 6px;
-    color: white;
-    display: inline-block;
-    font-size: 16px;
-    letter-spacing: 1px;
-    margin: 0;
-    overflow: visible;
-    padding: 10px 20px 10px 20px;
-    position: relative;
-    margin-top: 2rem;
-    cursor: pointer;
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    font-weight: lighter;
-
-}
-
-a.btn:hover {
-    background: #86c440;
-}
-
-#header-arrow {
-    font-size: 140px;
-    margin: -10px auto;
-    text-align: center;
-    position: absolute;
-    width: 100%;
-    left: 0;
-    bottom: -120px;
-    cursor: pointer;
-    opacity: 0.6;
-    transition: all ease 0.3s;
-    -webkit-transition: all ease 0.3s;
-    -moz-transition: all ease 0.3s;
-}
-#header-arrow:hover {
-    opacity: 0.9;
+    color: #57A3E8;
 }
 
 h1 a, h2 a, h3 a,
 h4 a, h5 a, h6 a {
-    /*color: #50585D;*/
+    color: #50585D;
 }
 
 
-p, ul, ol {
-    margin: 1em 0;
+p, ul, ol, dl {
+    margin: 1.6em 0;
 }
 
 ol ol, ul ul,
 ul ol, ol ul {
     margin: 0.4em 0;
-}
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #efefef;
-    margin: 3.2em 0;
-    padding: 0;
-}
-
-blockquote {
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    margin: 1.0em 0 1.0em -2.2em;
-    padding: 0 0 0 1.0em;
-    /*border-left: #4a4a4a 0.4em solid;*/
-    font-weight: lighter;
-}
-
-blockquote p {
-    margin: 0.8em 0;
-}
-.quo {
-    /*float: left;*/
-    margin-right: 10px;
-    margin-left: 10px;
-    font-size: 20px;
-}
-
-blockquote small {
-    display: inline-block;
-    margin: 0.8em 0 0.8em 1.5em;;
-    font-size:0.9em;
-    color: #ccc;
-}
-
-blockquote small:before { content: '\2014 \00A0'; }
-
-blockquote cite {
-    font-weight:bold;
-}
-
-blockquote cite a { font-weight: normal; }
-
-
-dl {
-    margin: 1.6em 0;
 }
 
 dl dt {
@@ -296,19 +188,55 @@ dl dd {
     margin-bottom: 1em
 }
 
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #efefef;
+    margin: 3.2em 0;
+    padding: 0;
+}
+
+blockquote {
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    margin: 1.6em 0 1.6em -2.2em;
+    padding: 0 0 0 1.6em;
+    border-left: #4a4a4a 0.4em solid;
+}
+
+blockquote p {
+    margin: 0.8em 0;
+    font-style: italic;
+}
+
+blockquote small {
+    display: inline-block;
+    margin: 0.8em 0 0.8em 1.5em;
+    font-size:0.9em;
+    color: #ccc;
+}
+
+blockquote small:before { content: '\2014 \00A0'; }
+
+blockquote cite {
+    font-weight:bold;
+}
+
+blockquote cite a { font-weight: normal; }
+
 mark {
     background-color: #ffc336;
 }
 
 code, tt {
-    padding: 3px 5px;
+    padding: 1px 3px;
     font-family: Inconsolata, monospace, sans-serif;
-    font-size: 0.75em;
-    /*white-space: pre;*/
+    font-size: 0.85em;
+    white-space: pre-wrap;
     border: 1px solid #E3EDF3;
     background: #F7FAFB;
     border-radius: 2px;
-    color: #3A4145;
 }
 
 pre {
@@ -389,22 +317,21 @@ table tbody > tr:nth-child(odd) > th {
     background-color: #f6f6f6;
 }
 
-table.plain {
-    tbody > tr:nth-child(odd) > td,
-    tbody > tr:nth-child(odd) > th {
-        background: transparent;
-    }
-}
-li {
-  list-style-type: none;
-  margin-left: 30px;
-}
-.bult {
-    display: inline;
-    float: left;
-    padding-top: 7px;
+table.plain tbody > tr:nth-child(odd) > td,
+table.plain tbody > tr:nth-child(odd) > th {
+   background: transparent;
 }
 
+iframe, .fluid-width-video-wrapper {
+    display: block;
+    margin: 1.6em 0;
+}
+
+/* When a video is inside the fitvids wrapper, drop the
+margin on the iframe, cause it breaks stuff. */
+.fluid-width-video-wrapper iframe {
+    margin: 0;
+}
 
 
 /* ==========================================================================
@@ -438,25 +365,24 @@ li {
    ========================================================================== */
 
 /* Big cover image on the home page */
-#site-head {
+.site-head {
     position: relative;
     display: table;
     width: 100%;
-    height: 100%;
-    margin-bottom: 0rem;
+    height: 60%;
+    margin-bottom: 5rem;
     text-align: center;
     color: #fff;
-    background: rgb(0, 153, 204) no-repeat center center;
+    background: #303538 no-repeat center center;
     background-size: cover;
 }
 
-#site-head:after {
-
+.blog-logo {
+    text-decoration: none;
 }
 
-
 /* Yo-logo. Yolo-go. Upload one in ghost/settings/ */
-#blog-logo img {
+.blog-logo img {
     display: block;
     max-height: 100px;
     width: auto;
@@ -464,20 +390,14 @@ li {
     line-height: 0;
 }
 
-#back {
-    color: rgba(0,0,0,0.2);
-    position: fixed;
-    top: 8px;
-    left: 8px;
-    padding: 6px;
-    font-size: 16px;
-}
-
 /* The details of your blog. Defined in ghost/settings/ */
 .blog-title {
     margin: 10px 0 10px 0;
     font-size: 5rem;
     letter-spacing: -1px;
+    font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    text-shadow: 0 1px 6px rgba(0,0,0,0.1);
 }
 
 .blog-description {
@@ -485,75 +405,40 @@ li {
     font-size: 1.8rem;
     line-height: 1.5em;
     font-weight: 300;
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Noto Serif', serif;
     letter-spacing: 0;
-}
-
-.post-holder {
-    width:100%;
-    height: 100%;
-    background: #f2efe8;
-    position: relative;
+    text-shadow: 0 1px 3px rgba(0,0,0,0.15);
 }
 
 /* Every post, on every page, gets this style on its <article> tag */
 .post {
     position: relative;
-    width: 80%;
+    width:80%;
     max-width: 700px;
-    margin: 0rem auto;
+    margin: 4rem auto;
     padding-bottom: 4rem;
-    padding-top: 4rem;
-    height: 70%;
+    border-bottom: #EBF2F6 1px solid;
     word-break: break-word;
     hyphens: auto;
-
 }
 
 /* Add a little circle in the middle of the border-bottom on our .post
    just for the lolz and stylepoints. */
-
-.fixed-nav {
-    display: none;
-    opacity: 1;
-    position: fixed;
-    top: 40px;
-    left: 2%;
-    z-index: 99999;
-    font-family: 'Open Sans Condensed', sans-serif;
-    text-transform: uppercase;
-    font-size: 1.5rem;
-    line-height: 130%;
-    font-weight: bold;
-}
-a.fn-item {
+.post:after {
     display: block;
-    cursor: pointer;
-    opacity: 0.7;
-}
-.white {
-    color: white;
-}
-a.fn-item:hover {
-    color: #9fd067;
-}
-a.fn-item.active {
-    color: #86c440;
-    opacity: 1;
-
-}
-
-.post-after {
+    content: "";
+    width: 7px;
+    height: 7px;
+    border: #E7EEF2 1px solid;
     position: absolute;
-    bottom: -40px;
-    right: 6%;
-    z-index: 1;
-    width: 0; 
-    height: 0; 
-    border-left: 60px solid transparent;
-    border-right: 60px solid transparent;
-    border-top: 50px solid #f2efe8;
-    border-radius: 25px;
+    bottom: -5px;
+    left: 50%;
+    margin-left: -5px;
+    background: #fff;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    box-shadow: #fff 0 0 0 5px;
 }
 
 .post-title {
@@ -649,6 +534,12 @@ a.fn-item.active {
 /* Insert some mad padding up in the header for better spacing */
 .post-template .post-header {
     padding: 60px 0;
+    text-align: center;
+}
+
+.post-template .blog-title {
+    display: inline-block;
+    padding: 2.5rem 0;
 }
 
 /* Keep large images within the bounds of the post-width */
@@ -656,6 +547,7 @@ a.fn-item.active {
     display: block;
     max-width: 100%;
     margin: 0 auto;
+    height: auto;
 }
 
 /* The author credit area after the post */
@@ -698,6 +590,7 @@ a.fn-item.active {
     display: inline-block;
     margin: 1.4rem 1.6rem 1.6rem 0;
     color: #BBC7CC;
+    text-decoration: none;
 }
 
 .post-footer .share a:hover {
@@ -779,14 +672,15 @@ a.fn-item.active {
 
 .site-footer {
     position: relative;
-    margin: 0rem 0 0 0;
-    padding: 1rem 0;
+    margin: 8rem 0 0 0;
+    padding: 4rem 0;
+    border-top: #EBF2F6 1px solid;
     font-family: 'Open Sans', sans-serif;
     font-size: 1.3rem;
-    line-height: 1.5em;
+    line-height: 1.7em;
     color: #BBC7CC;
     text-align: center;
-    background: #22343A;
+    background: #F7FAFB;
 }
 
 .site-footer a {
@@ -798,16 +692,16 @@ a.fn-item.active {
     color: #50585D;
 }
 
-.poweredby .i-ghost {
+.poweredby .icon-ghost {
     font-weight: 700;
     text-decoration: none;
 }
 
-.poweredby .i-ghost:hover {
+.poweredby .icon-ghost:hover {
     text-decoration: none;
 }
 
-.poweredby .i-ghost:before {
+.poweredby .icon-ghost:before {
     font-size: 1rem;
     margin-right: 0.2em;
 }
@@ -833,7 +727,7 @@ a.fn-item.active {
     color: #D2DEE3;
     font-size: 10px;
     position: absolute;
-    top: 2px;
+    top: 9px;
     left: 9px;
     font-weight: bold;
     transition: color 0.5s ease;
@@ -856,10 +750,9 @@ a.fn-item.active {
     padding: 4px 8px 5px 8px;
     position:absolute;
     top: -23px;
-    left: -23px;
+    left: -21px;
     color: rgba(255,255,255,0.9);
     font-size: 1.1rem;
-    font-weight: bold;
     line-height: 1em;
     text-align: center;
     background: #50585D;
@@ -891,39 +784,22 @@ a.fn-item.active {
 
 
 /* ==========================================================================
-   9. Media Queries - Smaller than 1130px
+   9. Media Queries - Smaller than 900px
    ========================================================================== */
 
-@media only screen and (max-width: 1130px) {
-    .fixed-nav {
-        opacity: 1;
-        position: fixed;
-        top: 0px;
-        left: 0px;
-        z-index: 99999;
-        background: #f2efe8;
-        width: 100%;
-        text-align: center;
-        padding: 4px;
-    }
-    a.fn-item {
-        display: inline;
-        margin-left: 10px;
-    }
+@media only screen and (max-width: 900px) {
+
     blockquote {
         margin-left: 0;
     }
-    .post-holder {
-        padding-top: 20px;
-    }
-    #site-head {
+
+    .site-head {
         -webkit-box-sizing: border-box; 
         -moz-box-sizing: border-box;
         box-sizing: border-box; 
+        height: auto;
         min-height: 240px;
         padding: 15% 0;
-        height: 100%;
-        margin-bottom: 0rem;
     }
 
     .blog-title {
@@ -975,14 +851,7 @@ a.fn-item.active {
 
 @media only screen and (max-width: 500px) {
 
-    .fixed-nav {
-        display: none;
-
-    }
-    .post-holder {
-        padding-top: 20px;
-    }
-    #blog-logo img {
+    .blog-logo img {
         max-height: 80px;
     }
 
@@ -1001,15 +870,8 @@ a.fn-item.active {
         line-height: 1.6em;
     }
 
-    #site-head {
+    .site-head {
         padding: 10% 0;
-        height: 65%;
-    }
-    #header-arrow {
-        display: none;
-    }
-    a.btn {
-        margin-top: 10px;
     }
 
     .blog-title {
@@ -1078,7 +940,7 @@ a.fn-item.active {
     }
 
     .site-footer {
-        /*margin-top: 0.8rem;*/
+        margin-top: 6rem;
         font-size: 1.1rem;
     }
 
